feat: 修复导出成绩的相关问题